# pvc-reaper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  justfile
.github/workflows/: ci.yaml  release.yaml
helm/pvc-reaper/: Chart.yaml  values.yaml
helm/pvc-reaper/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
scripts/: cleanup-test-cluster.sh  run-integration-tests.sh  setup-test-cluster.sh
src/: lib.rs  main.rs
tests/: integration_test.rs
