[package]
name = "pvc-reaper"
version = "0.1.0"
edition = "2024"
authors = ["PVC Reaper Contributors"]
description = "Kubernetes controller to automatically delete PVCs pointing to missing nodes"
license = "MIT"
repository = "https://github.com/0xforerunner/pvc-reaper"

[lib]
name = "pvc_reaper"
path = "src/lib.rs"

[[bin]]
name = "pvc-reaper"
path = "src/main.rs"

[dependencies]
kube = { version = "2.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
serde_yaml = "0.9"
